<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>esa.egos</groupId>
	<artifactId>csts.api</artifactId>
	<version>1.0.1</version>
	<packaging>bundle</packaging> <!-- bundle (instead of jar) packaging is required for maven-bundle-plugin  -->

	<name>CSTS API</name>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jasn1.version>1.11.2</jasn1.version>
	</properties>

	<description>Cross Support Transfer Service API</description>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.beanit</groupId>
				<artifactId>jasn1</artifactId>
				<version>${jasn1.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<dependencies>
		<dependency>
			<groupId>com.beanit</groupId>
			<artifactId>jasn1</artifactId>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>				
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>

			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				
				<configuration>
				    <archive>  
				      <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
				    </archive> 
				 </configuration>				
				
				<executions>
					<execution>
						<id>default-jar</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>

			<!-- create also a jar with a MANIFEST.MF suitable for OSGi development -->
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>4.2.1</version>
			
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${groupId}.${pom.artifactId}</Bundle-SymbolicName>
						<!-- How to get rid of the jasn1-1.8.0.jar in the csts.api-osgi-1.0.1.jar? Not ideal, but in line with the fat jar.  -->
						<Embed-Dependency>*;scope=compile|runtime</Embed-Dependency> embed the jasn1 jar
					</instructions>
					<finalName>${project.artifactId}-osgi-${project.version}</finalName> <!-- different to the default name for fat jar with dependencies -->
				</configuration>
			</plugin>	

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<id>fat-jar-with-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>esa.egos.csts.api.main.Slecsexe</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
							<finalName>${project.artifactId}-${project.version}</finalName>
							<appendAssemblyId>false</appendAssemblyId>
						</configuration>
					</execution>
					
					<execution>
						<id>source-package</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptor>src/assembly/source-delivery.xml</descriptor>
							<finalName>${project.artifactId}-${project.version}</finalName>
						</configuration>
					</execution>
					<execution>
						<id>binary-package</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptor>src/assembly/binary-delivery.xml</descriptor>
							<finalName>${project.artifactId}-${project.version}</finalName>
						</configuration>
					</execution>
				</executions>
			</plugin>
					
		</plugins>
	</build>

</project>
